--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   }, 
-  "proxy":"http://localhost:3001"
+  "proxy":"https://mem-token-server.vercel.app/"
 }
